src/parsers/__tests__/samples/rust-compilation-error.txt
error[E0425]: cannot find value `undefinedVar` in this scope
  --> src/lib.rs:5:13
   |
5  |     println!("{}", undefinedVar);
   |                    ^^^^^^^^^^^^ not found in this scope

error: could not compile `myproject` due to previous error